--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <div class="container-fluid p-0">
+    <div class="container p-0">
         <div class="row">
             <header class="col-12">
-                <nav class="navbar navbar-expand-lg nav-bg p-3 fixed-top">
+                <nav class="navbar navbar-expand-lg nav-bg p-3">
                     <div class="container-fluid">
                         <div class="d-flex">
                             <img src="images/travel india logo.png" class="logo-image"/>
