--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container-fluid">
         <div class="row">
             <header class="col-12">
-                <nav class="navbar navbar-expand-lg nav-bg p-3">
+                <nav class="navbar navbar-expand-lg nav-bg p-3 fixed-top">
                     <div class="container-fluid">
                         <div class="d-flex">
                             <img src="images/travel india logo.png" class="logo-image"/>
