some final changes was made

--- a/index.html
+++ b/index.html
@@ -179,17 +179,25 @@
                         India a little bit better.”
                     </p>
                 </div>
-                <div class="col-6 d-flex flex-column justify-content-center">
-                        <div class="container ">
-                            <p class="para">&copy; 2024 Travel Agency. All rights reserved.</p>
-                            <div class="social-links text-center">
-                                <a href="#" style="color: blue;">Facebook</a>
-                                <a href="#" style="color: blue;">Twitter</a>
-                                <a href="#" style="color: blue;">Instagram</a>
-                            </div>
-                        </div>
+                <div class="col-6 ">
+                        <form class="form-container">
+                            <input type="text" placeholder="Name" class="form-input-element"/>
+                            <input type="email" placeholder="Email" class="form-input-element"/>
+                            <input type="number" placeholder="Whatsapp number" class="form-input-element"/>
+                            <input type="textarea" placeholder="Message" style="height: 80px;" class="form-input-element"/>
+                            <button class="btn btn-primary m-2">Submit</button>
+                        </form>
                 </div>
-            
+                <div class="col-12">
+                    <div class="container mt-3">
+                        <p class="para">&copy; 2024 Travel Agency. All rights reserved.</p>
+                        <div class="social-links text-center">
+                            <a href="#" style="color: blue;">Facebook</a>
+                            <a href="#" style="color: blue;">Twitter</a>
+                            <a href="#" style="color: blue;">Instagram</a>
+                        </div>
+                    </div>
+                </div>
             </footer>
         </div>
     </div>
